--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,13 @@ buildscript {
   }
 
   dependencies {
-    classpath("gradle.plugin.install4j.install4j:gradle_plugin:7.0.7")
-    classpath("org.springframework.build.gradle:propdeps-plugin:${propdepsVersion}")
+    classpath("gradle.plugin.install4j.install4j:gradle_plugin:${install4jVersion}")
     classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
   }
 }
 
 plugins {
-  id "com.install4j.gradle" version "7.0.7"
+  id "com.install4j.gradle" version "${install4jVersion}"
   id "co.riiid.gradle" version "0.4.2"
   id "de.undercouch.download" version "4.1.1"
   id 'jacoco'
@@ -31,7 +30,6 @@ jacoco {
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'propdeps'
 apply plugin: 'distribution'
 
 
@@ -257,7 +255,7 @@ dependencies {
   implementation(project(":webview-patch"))
   implementation("org.javassist:javassist:${project.ext['javassist.version']}")
 
-  provided("com.install4j:install4j-runtime:${install4jRuntimeVersion}")
+  implementation("com.install4j:install4j-runtime:${install4jVersion}")
 
   testImplementation('junit:junit:4.13')
   testImplementation("org.testfx:testfx-core:4.0.8-alpha") {
