Upgrade to Gradle 7

--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ distributions {
     contents {
       from {
         [
-            configurations.runtime,
+            configurations.runtimeClasspath,
             jar,
             downloadIceAdapter.outputs.files,
             downloadUnixUid.outputs.files,
