set local client id and secret to the default in faf-stack

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -23,8 +23,8 @@ faf-client:
 
   api:
     base-url: http://localhost:8010
-    client-id: 3bc8282c-7730-11e5-8bcf-feff819cdc9f
-    client-secret: 6035bd78-7730-11e5-8bcf-feff819cdc9f
+    client-id: test
+    client-secret: test
 
   forged-alliance:
     exe-url: https://content.faforever.com/faf/updaterNew/updates_faf_files/ForgedAlliance.exe
