Use install4j 9 license

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
           ./gradlew -Pversion="${{ github.event.inputs.version }}" \
           -PjavafxPlatform=win \
           -Pinstall4jHomeDir=$HOME/$INSTALL4J_DIR \
-          -Pinstall4jLicense=${{ secrets.INSTALL4J_LICENSE }} \
+          -Pinstall4jLicense=${{ secrets.INSTALL4J_9_LICENSE }} \
           --info \
           --stacktrace \
           buildInstall4jMediaFiles
@@ -68,7 +68,7 @@ jobs:
           ./gradlew -Pversion="${{ github.event.inputs.version }}" \
           -PjavafxPlatform=linux \
           -Pinstall4jHomeDir=$HOME/$INSTALL4J_DIR \
-          -Pinstall4jLicense=${{ secrets.INSTALL4J_LICENSE }} \
+          -Pinstall4jLicense=${{ secrets.INSTALL4J_9_LICENSE }} \
           --stacktrace \
           buildInstall4jMediaFiles
 
