--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,13 @@ version=unspecified
 javafxPlatform=unspecified
 faf_ice_adapter_version=3.0.0
 faf_uid_version=4.0.4
-propdepsVersion=0.0.7
 springBootVersion=2.4.0
 springSecurityOauth2AutoconfigureVersion=2.3.4.RELEASE
 fafCommonsVersion=2474a361d0534ae77c5fefe9874d4134b8156c94
 qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
 jsonapiConverterVersion=0.10
-install4jRuntimeVersion=7.0.7
+install4jVersion=9.0.2
 javassist.version=3.23.1-GA
 javafxVersion=15.0.1
 coverallsGradlePluginVersion=2.10.1
