Update to Java 16, JavaFx 16, and Spring Boot 2.5.0

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,8 +58,9 @@ faf-client:
     join-url: https://discord.gg/PfGcWas
 
 spring:
-  profiles:
-    active: ${CLIENT_PROFILE:prod}
+  config:
+    activate:
+      on-profile: ${CLIENT_PROFILE:prod}
   application:
     name: Downlord's FAF Client
   main:
