--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,16 @@ version=unspecified
 javafxPlatform=unspecified
 faf_ice_adapter_version=3.0.0
 faf_uid_version=4.0.4
-springBootVersion=2.4.0
-springSecurityOauth2AutoconfigureVersion=2.3.4.RELEASE
+springBootVersion=2.5.0
+springSecurityOauth2AutoconfigureVersion=2.5.0
 fafCommonsVersion=355fab4d3d0e7afe38a6f1d7e376a7f6305a582d
 qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
 jsonapiConverterVersion=0.10
 install4jVersion=9.0.2
 javassist.version=3.23.1-GA
-javafxVersion=15.0.1
+javafxVersion=16
+coverallsGradlePluginVersion=2.10.1
 jnaVersion=5.6.0
 discordRpcVersion=1.6.2-jna
 controlsfxVersion=11.0.3
