Use junit platform

--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,9 @@ jacocoTestReport {
 }
 
 test {
+  useJUnitPlatform()
   testLogging {
-    events("failed")
+    events("passed", "skipped", "failed")
   }
 }
 
