--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,11 @@ tasks.withType(Test) {
   afterTest { descriptor, result ->
     String indent = '    '
     if (result.failedTestCount > 0) {
-      out.println("")
-      out.println(ANSI_BOLD_WHITE + descriptor.parent.name + ANSI_RESET)
-      out.println(indent + ANSI_RED + X_MARK + ANSI_RESET + " " + descriptor.name);
-      String exceptions = result.getException().toString()
-      out.println(indent + exceptions.split("\\n").join("\n" + indent))
+      String exceptions = result.getException().toString().split("\\n").join("\n" + indent)
+
+      out.println("\n" + ANSI_BOLD_WHITE + descriptor.parent.name + ANSI_RESET
+                  + "\n" + indent + ANSI_RED + X_MARK + ANSI_RESET + " " + descriptor.name
+                  + "\n" + indent + exceptions)
     }
   }
 
@@ -133,7 +133,7 @@ jacocoTestReport {
 test {
   useJUnitPlatform()
   testLogging {
-    events("failed")
+    events()
   }
   systemProperties = [
           'junit.jupiter.execution.parallel.enabled': true
