revert to ubuntu 18.04 for actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
   release:
 
     environment: deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     env:
       INSTALL4J_DIR: "install4j/install4j9.0.2"
 
