--- a/build.gradle
+++ b/build.gradle
@@ -257,6 +257,7 @@ dependencies {
   implementation("org.springframework.boot:spring-boot-starter-cache")
   implementation("org.springframework.boot:spring-boot-starter-logging")
   implementation("org.springframework.boot:spring-boot-starter-websocket")
+  implementation("org.springframework.boot:spring-boot-starter-webflux")
   implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
   implementation("org.springframework:spring-web")
   implementation("org.springframework:spring-websocket")
@@ -308,6 +309,9 @@ dependencies {
 
   implementation("com.install4j:install4j-runtime:${install4jVersion}")
 
+  testImplementation("com.squareup.okhttp3:okhttp")
+  testImplementation("com.squareup.okhttp3:mockwebserver")
+  testImplementation("io.projectreactor:reactor-test")
   testImplementation("org.testfx:testfx-core:4.0.16-alpha") {
     exclude module: 'guava'
   }
