--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,14 +92,17 @@ jobs:
           WINDOWS_EXE_NAME=$(basename $WINDOWS_EXE)
           WINDOWS_ZIP=$(ls build/install4j/dfc_windows-x64_*.zip | head -n 1)
           WINDOWS_ZIP_NAME=$(basename $WINDOWS_ZIP)
+          CLIENT_UPLOAD_DIR=build/update4j/
           EXE_PATH=$(dirname $WINDOWS_EXE)/
           echo ::set-output name=EXE_PATH::${EXE_PATH}
           echo ::set-output name=LINUX_TAR::${LINUX_TAR}
           echo ::set-output name=LINUX_TAR_NAME::${LINUX_TAR_NAME}
+          echo ::set-output name=LINUX_UPLOAD_DIR::${LINUX_UPLOAD_DIR}
           echo ::set-output name=WINDOWS_EXE::${WINDOWS_EXE}
           echo ::set-output name=WINDOWS_EXE_NAME::${WINDOWS_EXE_NAME}
           echo ::set-output name=WINDOWS_ZIP::${WINDOWS_ZIP}
           echo ::set-output name=WINDOWS_ZIP_NAME::${WINDOWS_ZIP_NAME}
+          echo ::set-output name=WINDOWS_UPLOAD_DIR::${WINDOWS_UPLOAD_DIR}
 
       - name: Upload Linux Files
         id: upload-linux
@@ -133,7 +136,7 @@ jobs:
           asset_path: ${{ steps.artifact_paths.outputs.WINDOWS_ZIP }}
           asset_name: ${{ steps.artifact_paths.outputs.WINDOWS_ZIP_NAME }}
           asset_content_type: application/zip
-          
+
       - name: Upload to Mirror
         if: steps.tag_check.outputs.major_release == 'true'
         uses: bayssmekanique/action-simple-file-upload@v1
@@ -144,5 +147,12 @@ jobs:
           src: ${{ steps.artifact_paths.outputs.WINDOWS_EXE }}
           dest: ${{ steps.artifact_paths.outputs.WINDOWS_EXE_NAME }}
 
-    
-      
+      - name: Upload to Update Server
+        uses: burnett01/rsync-deployments@5.1
+        with:
+          switches: -avz
+          path: ${{ steps.artifact_paths.outputs.CLIENT_UPLOAD_DIR }}
+          remote_path: /client
+          remote_host: ${{ secrets.CLIENT_UPLOAD_HOST }}
+          remote_user: data
+          remote_key: ${{ secrets.CLIENT_UPLOAD_SSH_PRIVATE_KEY }}
