--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=unspecified
+version=0.0.0
 javafxPlatform=unspecified
 faf_ice_adapter_version=3.1.1
 faf_uid_version=4.0.4
@@ -15,3 +15,4 @@ jnaVersion=5.6.0
 discordRpcVersion=1.6.2-jna
 controlsfxVersion=11.0.3
 flowlessVersion=0.6.2
+update4jVersion=1.5.7
