--- a/build.gradle
+++ b/build.gradle
@@ -337,6 +337,7 @@ dependencies {
   testImplementation("org.testfx:testfx-junit5:4.0.16-alpha")
   testImplementation("com.natpryce.hamcrest:hamcrest-reflection:0.1-2")
   testImplementation("org.springframework.boot:spring-boot-starter-test")
+  testImplementation("org.testfx:openjfx-monocle:jdk-12.0.1+2")
 
   annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
   annotationProcessor("org.projectlombok:lombok")
