Remove mentions of Downlord from the client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,7 +61,7 @@ spring:
   profiles:
     active: ${CLIENT_PROFILE:prod}
   application:
-    name: Downlord's FAF Client
+    name: FAF Client
   main:
     web-application-type: none
   codec:
