--- a/build.gradle
+++ b/build.gradle
@@ -166,9 +166,9 @@ bootRun {
 jar {
   manifest {
     attributes "Main-Class": "com.faforever.client.Main",
-        "Implementation-Title": "Downlord's FAF Client",
+        "Implementation-Title": "FAF Client",
         "Implementation-Version": archiveVersion,
-        "Implementation-Vendor": "Downlord"
+        "Implementation-Vendor": "Forged Alliance Forever"
   }
 }
 
