Update Spring Boot to 2.5.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ version=unspecified
 javafxPlatform=unspecified
 faf_ice_adapter_version=3.1.2
 faf_uid_version=4.0.4
-springBootVersion=2.4.0
-springSecurityOauth2AutoconfigureVersion=2.3.4.RELEASE
+springBootVersion=2.5.5
+springSecurityOauth2AutoconfigureVersion=2.5.5
 fafCommonsVersion=871fae4990f1f92dc2c99cba106927203584b11a
 qBuildersVersion=1.6
 jSkillsVersion=8b333ec63d
