--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,6 @@ plugins {
 
 // source: https://github.com/mendhak/Gradle-Travis-Colored-Output/blob/master/ColoredOutput.gradle
 tasks.withType(Test) {
-
   String ANSI_BOLD_WHITE = "\u001B[0;1m";
   String ANSI_RESET = "\u001B[0m";
   String ANSI_BLACK = "\u001B[30m";
@@ -35,15 +34,32 @@ tasks.withType(Test) {
   String CHECK_MARK = "\u2713";
   String NEUTRAL_FACE = "\u0CA0_\u0CA0";
   String X_MARK = "\u274C";
-  String indent = '    ';
+  String indent = '\t';
 
-  afterTest { descriptor, result ->
+  def outputCache = new HashMap<TestDescriptor, List<String>>()
+
+  beforeTest { TestDescriptor descriptor -> outputCache.put(descriptor, new ArrayList()) }
+
+  onOutput { TestDescriptor descriptor, TestOutputEvent testOutputEvent ->
+
+    def outputLines = outputCache.get(descriptor)
+    if (outputLines != null) {
+      outputLines.add(testOutputEvent.getMessage())
+    }
+  }
+
+  afterTest { TestDescriptor descriptor, TestResult result ->
     if (result.failedTestCount > 0) {
-      String exceptions = result.getException().toString().split("\\n").join("\n" + indent)
+      String output = outputCache.remove(descriptor).join(indent)
 
-      out.println("\n" + ANSI_BOLD_WHITE + descriptor.parent.name + ANSI_RESET
-                  + "\n" + indent + ANSI_RED + X_MARK + ANSI_RESET + " " + descriptor.name
-                  + "\n" + indent + exceptions)
+
+      def nameParts = descriptor.parent.name.split("\\.")
+      def simpleParentName  = nameParts[nameParts.length - 1]
+
+      out.println()
+      out.println(simpleParentName + " > " + descriptor.name + " STANDARD_OUT")
+      out.println(indent + output)
+      out.println()
     }
   }
 
@@ -63,11 +79,11 @@ tasks.withType(Test) {
       }
 
       out.println("--------------------------------------------------------------------------");
-      out.println("Results: " + summaryStyle + "${result.resultType}" + ANSI_RESET
+      out.println("Results: " + summaryStyle + " ${result.resultType} " + ANSI_RESET
               + " (${result.testCount} tests, "
-              + ANSI_GREEN + "${result.successfulTestCount} passed" + ANSI_RESET
-              + ", " + failStyle + "${result.failedTestCount} failed" + ANSI_RESET
-              + ", " + skipStyle + "${result.skippedTestCount} skipped" + ANSI_RESET
+              + ANSI_GREEN + " ${result.successfulTestCount} passed " + ANSI_RESET
+              + ", " + failStyle + " ${result.failedTestCount} failed " + ANSI_RESET
+              + ", " + skipStyle + " ${result.skippedTestCount} skipped " + ANSI_RESET
               + ")");
       out.println("--------------------------------------------------------------------------");
     }
@@ -132,12 +148,12 @@ jacocoTestReport {
 
 test {
   useJUnitPlatform()
-  testLogging {
-    exceptionFormat = 'full'
-  }
   systemProperties = [
           'junit.jupiter.execution.parallel.enabled': true
   ]
+  testLogging {
+    exceptionFormat = 'full'
+  }
 }
 
 configurations {
