--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ plugins {
 // source: https://github.com/mendhak/Gradle-Travis-Colored-Output/blob/master/ColoredOutput.gradle
 tasks.withType(Test) {
 
+  maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+
   String ANSI_BOLD_WHITE = "\u001B[0;1m";
   String ANSI_RESET = "\u001B[0m";
   String ANSI_BLACK = "\u001B[30m";
