--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,12 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:2.5.5"
   }
 }
 
 plugins {
-  id "com.install4j.gradle" version "${install4jVersion}"
+  id "com.install4j.gradle" version "9.0.2"
   id "co.riiid.gradle" version "0.4.2"
   id "de.undercouch.download" version "4.1.1"
   id 'jacoco'
@@ -247,14 +247,14 @@ task buildInstall4jMediaFiles(type: Install4jTask) {
 
 task downloadIceAdapter(type: Download) {
   group "native dependencies"
-  src "https://github.com/FAForever/java-ice-adapter/releases/download/v${faf_ice_adapter_version}/faf-ice-adapter.jar"
+  src "https://github.com/FAForever/java-ice-adapter/releases/download/v3.0.0/faf-ice-adapter.jar"
   dest file("${buildDir}/resources/native/faf-ice-adapter.jar")
   onlyIfNewer true
 }
 
 task downloadUnixUid(type: Download) {
   group "native dependencies"
-  src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid"
+  src "https://github.com/FAForever/uid/releases/download/v4.0.4/faf-uid"
   dest file("${buildDir}/resources/native/faf-uid")
   onlyIfNewer true
   doLast {
@@ -264,7 +264,7 @@ task downloadUnixUid(type: Download) {
 
 task downloadWindowsUid(type: Download) {
   group "native dependencies"
-  src "https://github.com/FAForever/uid/releases/download/v${faf_uid_version}/faf-uid.exe"
+  src "https://github.com/FAForever/uid/releases/download/v4.0.4/faf-uid.exe"
   dest file("${buildDir}/resources/native/faf-uid.exe")
   onlyIfNewer true
 }
@@ -294,17 +294,17 @@ dependencies {
   implementation("org.springframework.boot:spring-boot-starter-logging")
   implementation("org.springframework.boot:spring-boot-starter-websocket")
   implementation("org.springframework.boot:spring-boot-starter-webflux")
-  implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:${springSecurityOauth2AutoconfigureVersion}")
+  implementation("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.5.5")
   implementation("org.springframework:spring-web")
   implementation("org.springframework:spring-websocket")
 
-  implementation("com.github.FAForever:faf-java-commons:${fafCommonsVersion}") {
+  implementation("com.github.FAForever:faf-java-commons:067586f4582daaf2a0702da0f8f61d15484a4e47") {
     exclude module: 'guava'
   }
   implementation("com.google.guava:guava:30.0-jre")
   implementation("org.apache.commons:commons-compress:1.21")
-  implementation("net.java.dev.jna:jna:${jnaVersion}")
-  implementation("net.java.dev.jna:jna-platform:${jnaVersion}")
+  implementation("net.java.dev.jna:jna:5.6.0")
+  implementation("net.java.dev.jna:jna-platform:5.6.0")
   implementation("org.eclipse.jgit:org.eclipse.jgit:6.0.0.202111291000-r")
   implementation("org.jetbrains:annotations:23.0.0")
   implementation("com.neovisionaries:nv-i18n:1.29")
@@ -318,33 +318,33 @@ dependencies {
   implementation("javax.inject:javax.inject:1")
   implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
   implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-  implementation("com.github.rutledgepaulv:q-builders:${qBuildersVersion}")
-  implementation("com.github.nsp:JSkills:${jSkillsVersion}")
-  implementation("com.github.jasminb:jsonapi-converter:${jsonapiConverterVersion}")
+  implementation("com.github.rutledgepaulv:q-builders:1.6")
+  implementation("com.github.nsp:JSkills:8b333ec63d")
+  implementation("com.github.jasminb:jsonapi-converter:0.10")
   implementation("javax.annotation:javax.annotation-api:1.3.2")
   implementation("com.github.ben-manes.caffeine:caffeine")
   implementation("org.apache.httpcomponents:httpclient")
   implementation("io.github.micheljung:fxstage:0.8.1")
   implementation("io.github.micheljung:jfx-waitomo-theme:0.3.0")
   implementation("org.kitteh.irc:client-lib:8.0.0")
-  implementation("org.mapstruct:mapstruct:${mapStructVersion}")
+  implementation("org.mapstruct:mapstruct:1.4.2.Final")
 
-  implementation("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-graphics:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-swing:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
-  implementation("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
-  implementation("com.github.1-alex98:discord-rpc:${discordRpcVersion}")
-  implementation("org.controlsfx:controlsfx:${controlsfxVersion}")
-  implementation("org.fxmisc.flowless:flowless:${flowlessVersion}")
+  implementation("org.openjfx:javafx-base:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-controls:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-graphics:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-swing:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-fxml:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-web:15.0.1:${javafxPlatform}")
+  implementation("org.openjfx:javafx-media:15.0.1:${javafxPlatform}")
+  implementation("com.github.1-alex98:discord-rpc:1.6.2-jna")
+  implementation("org.controlsfx:controlsfx:11.0.3")
+  implementation("org.fxmisc.flowless:flowless:0.6.2")
   implementation("de.codecentric.centerdevice:javafxsvg:1.3.0")
 
   implementation(project(":webview-patch"))
-  implementation("org.javassist:javassist:${project.ext['javassist.version']}")
+  implementation("org.javassist:javassist:3.23.1-GA")
 
-  implementation("com.install4j:install4j-runtime:${install4jVersion}")
+  implementation("com.install4j:install4j-runtime:9.0.2")
 
   testImplementation("com.squareup.okhttp3:okhttp")
   testImplementation("com.squareup.okhttp3:mockwebserver")
@@ -360,9 +360,9 @@ dependencies {
 
   annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
   annotationProcessor("org.projectlombok:lombok")
-  annotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
+  annotationProcessor("org.mapstruct:mapstruct-processor:1.4.2.Final")
   testAnnotationProcessor("org.projectlombok:lombok")
-  testAnnotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
+  testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.4.2.Final")
   compileOnly("org.projectlombok:lombok")
   testCompileOnly("org.projectlombok:lombok")
 
