--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,8 @@ faf-client:
     wiki: https://wikijs.faforever.com/
 
   vault:
-    map_rules_url: https://forum.faforever.com/topic/323/faf-map-vault-rules-regulations
-    mod_rules_url: https://forum.faforever.com/topic/607/faf-mod-vault-rules-regulations
+    map_rules_url: https://wiki.faforever.com/en/Vault-Rules
+    mod_rules_url: https://wiki.faforever.com/en/Vault-Rules
     map_validation_url: ${faf-client.api.base-url}/maps/validate
     mapDownloadUrlFormat: ${faf-client.vault.base-url}/maps/%s.zip
     mapPreviewUrlFormat: ${faf-client.vault.base-url}/maps/previews/%s/%s.png
